# corthena

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum  pyproject.toml  setup.py  spec_agent_python_rewrite.md
python_migration/: AGENTS.md  MANIFEST.in  README.md  pyproject.toml
python_migration/docs/: phase-0-compatibility.md  phase0-cp314-compatibility.md  phase0-cp314t-compatibility.md
python_migration/screenshots/: README.md
python_migration/specs/: README.md  api.md  concurrency-and-parallelism.md  contract.md  design-pattern.md  evaluation.md  inference.md  migration-baseline.md  model-estimators.md  models.md  product.md  python-migration.md  quality-common.md  quality-concurrency.md  quality-visualization.md  roadmap.md  system-architecture.md  technology-stack.md  training-runtime.md
python_migration/specs/decisions/: 0001-local-process-architecture.md  0004-raylib-dockable-interface.md  0005-python-process-concurrency.md  README.md  (+2 more)
python_migration/tests/: test_cython_adapter.py  test_frontend_assets.py  test_frontend_effects.py  test_frontend_golden.py  test_frontend_lifecycle.py  test_frontend_phase4.py  test_frontend_phase5.py  test_frontend_phase5_benchmark.py  test_frontend_phase5b.py  test_frontend_shell.py  test_frontend_state.py  test_loopback.py  test_runtime.py  test_storage.py  test_ui_assets.py  test_ui_effects.py  test_ui_golden.py  test_ui_phase4.py  test_ui_phase5.py  test_ui_phase5b.py  test_ui_phase7.py  test_ui_phase8.py  test_ui_phase9.py  test_ui_research.py  test_ui_research_benchmark.py  test_ui_state.py  test_ui_windows.py
(+541 files in other folders)
