[build-system]
requires = ["setuptools==83.0.0", "cython==3.2.8"]
build-backend = "setuptools.build_meta"

[project]
name = "corthena"
version = "0.0.0"
description = "Windows-first Corthena Python/Cython migration"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "numpy==2.5.1",
    "pyarrow==23.0.1",
    "raylib==6.0.1.0",
    "uvicorn==0.51.0",
    "websockets==16.1",
]

[project.optional-dependencies]
dev = [
    "cython==3.2.8",
    "hypothesis==6.156.6",
    "pip-audit==2.10.1",
    "pyright==1.1.411",
    "pytest==9.1.1",
    "pytest-benchmark==5.2.3",
    "ruff==0.15.21",
]

[project.scripts]
corthena-phase0-gate = "corthena.compatibility.gate:main"
corthena-workstation = "corthena.workstation.__main__:main"

[tool.setuptools.package-data]
"corthena.frontend.assets" = [
    "fonts/*.ttf",
    "icons/*.png",
    "licenses/*.txt",
    "THIRD_PARTY_NOTICES.md",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
